<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="medicines_name_corticosteroids">corticosteroids</string>
    <string name="medicines_name_vitamin_d_analogues">vitamin D analogues</string>
    <string name="medicines_name_retinoids">retinoids</string>
    <string name="medicines_name_calcineurin_inhibitors">calcineurin inhibitors</string>
    <string name="medicines_name_salicylic_acid">salicylic acid</string>
    <string name="coal_tar">coal tar</string>
    <string name="medicines_name_anthralin">anthralin</string>
    <string name="medicines_name_sunlight">sunlight</string>
    <string name="medicines_name_uvb_broadband">UVB broadband</string>
    <string name="medicines_name_uvb_narrowband">UVB narrowband</string>
    <string name="medicines_name_steroids">steroids</string>
    <string name="medicines_name_retinoid_pills">retinoid pills</string>
    <string name="medicines_name_biologics">biologics</string>
    <string name="medicines_name_methotrexate">methotrexate</string>
    <string name="medicines_name_cyclosporine">cyclosporine</string>
    <string name="medicines_name_supliments">supliments</string>
    <string name="trigger_name_wheat">wheat</string>
    <string name="trigger_name_lactose">lactose</string>
    <string name="trigger_name_milk">milk</string>
    <string name="trigger_name_seafood">sea food</string>
    <string name="trigger_name_egg">egg</string>
    <string name="trigger_name_nightshade">nightshade</string>
    <string name="trigger_name_citrus">citrus</string>
    <string name="trigger_name_fastfood">fast food</string>
    <string name="trigger_name_fattyfood">fatty food</string>
    <string name="trigger_name_alcohol">alcohol</string>
    <string name="trigger_name_hot">hot</string>
    <string name="trigger_name_dry">dry</string>
    <string name="trigger_name_cold">cold</string>
    <string name="trigger_name_rainy">rainy</string>
    <string name="trigger_name_windy">windy</string>
    <string name="trigger_name_snowy">snowy</string>
    <string name="trigger_name_coldfront">cold front</string>
    <string name="trigger_name_warmfront">warm front</string>
    <string name="trigger_name_anxiety">anxiety</string>
    <string name="trigger_name_depression">depression</string>
    <string name="trigger_name_insomnia">insomnia</string>
    <string name="trigger_name_medicine">medicine</string>
    <string name="trigger_name_infection">infection</string>
    <string name="trigger_name_sweat">sweat</string>
    <string name="trigger_name_smoking">smoking</string>
    <string name="feeling_name_sad">sad</string>
    <string name="feeling_name_unhappy">Unhappy</string>
    <string name="feeling_name_neutral">Neutral</string>
    <string name="feeling_name_happy">Happy</string>
    <string name="feeling_name_joyful">joyful</string>
    <string name="feeling_slider_label">Feeling</string>
    <string name="trigger_name_soy">soy</string>

    <string name="button_prev">Prev</string>
    <string name="button_next">Next</string>

</resources>