...
    Slider(
        value = sliderValue,
        valueRange = 0f..4f,
        steps = 3,
        enabled = enabled,
        onValueChange = onValueChange,
        modifier = modifier.fillMaxWidth(0.95f).testTag("feelingSlider")
    )
    Row(
        modifier = modifier
            .fillMaxWidth(0.95f)
            .padding(vertical = dp_m),
        horizontalArrangement = Arrangement.SpaceBetween
...
