...
        floatingActionButton = {
            LargeFloatingActionButton(
                onClick = {
                    viewModel.saveClick()
                    onFabClick()
                },
                modifier = Modifier.testTag("saveFab")
            ) {
                Icon(
                    imageVector = Icons.Outlined.Save,
                    contentDescription = null,
                    modifier = Modifier.size(FloatingActionButtonDefaults.LargeIconSize)
                )
...
